@@ -625,6 +625,7 @@ ALTER TABLE `gibbonPerson` ADD `receiveNoticiationEmails` ENUM('N','Y') NOT NULL
 INSERT INTO `gibbonSetting` (`gibbonSystemSettingsID` ,`scope` ,`name` ,`nameDisplay` ,`description` ,`value`)VALUES (NULL , 'Planner', 'makeUnitsPublic', 'Make Units Public', 'Enables a public listing of units, with teachers able to opt in to share units.', 'N');end
 ALTER TABLE `gibbonUnit` ADD `license` VARCHAR(50) NULL DEFAULT NULL AFTER `embeddable`, ADD `sharedPublic` ENUM('Y','N') NULL DEFAULT NULL AFTER `license`;end
 UPDATE gibboni18n SET maintainerName='Jasmine Chan & Charlie Chow' WHERE code='zh_HK';end
+ALTER TABLE `gibbonHook` CHANGE `type` `type` ENUM('Public Home Page','Student Profile','Unit') CHARACTER SET utf8 COLLATE utf8_general_ci NULL DEFAULT NULL;end
 ";
 
 ?>
